fix: improve text contrast

--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,12 @@
   --card-foreground: 191 0% 10%;
   --popover: 191 0% 95%;
   --popover-foreground: 191 95% 0%;
-  --primary: 191 100% 28.4%;
+  --primary: 191 100% 22%;
   --primary-foreground: 0 0% 100%;
   --secondary: 191 10% 70%;
   --secondary-foreground: 0 0% 0%;
   --muted: 153 10% 85%;
-  --muted-foreground: 191 0% 35%;
+  --muted-foreground: 191 0% 28%;
   --accent: 153 10% 80%;
   --accent-foreground: 191 0% 10%;
   --destructive: 0 50% 30%;
@@ -34,12 +34,12 @@
   --card-foreground: 191 0% 90%;
   --popover: 191 10% 5%;
   --popover-foreground: 191 0% 90%;
-  --primary: 191 100% 28.4%;
-  --primary-foreground: 0 0% 100%;
+  --primary: 191 100% 35%;
+  --primary-foreground: 191 100% 8%;
   --secondary: 191 10% 10%;
   --secondary-foreground: 0 0% 100%;
   --muted: 153 10% 15%;
-  --muted-foreground: 191 0% 60%;
+  --muted-foreground: 191 0% 72%;
   --accent: 153 10% 15%;
   --accent-foreground: 191 0% 90%;
   --destructive: 0 50% 30%;
